<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#121212"
        tools:context=".DetailActivity">

        <ImageButton
            android:id="@+id/add_to_fav_btn"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:adjustViewBounds="true"
            android:background="#121212"
            android:contentDescription="@string/fav_btn_desc"
            app:srcCompat="@drawable/ic_baseline_favorite_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/iv_header" />

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/tv_title"
            app:layout_constraintDimensionRatio="h,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="98dp"
            android:layout_height="150dp"
            android:contentDescription="@string/iv_poster_content"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/iv_header"
            app:layout_constraintDimensionRatio="w,2:3"
            app:layout_constraintEnd_toStartOf="@+id/tv_title"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/start_margin"
            app:layout_constraintTop_toBottomOf="@+id/iv_header"
            tools:srcCompat="@tools:sample/avatars[1]" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/roboto"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/tv_rating"
            app:layout_constraintEnd_toStartOf="@+id/add_to_fav_btn"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/iv_header"
            tools:text="Beaty and the Beast" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/overview_label"
            app:layout_constraintEnd_toStartOf="@+id/add_to_fav_btn"
            app:layout_constraintStart_toEndOf="@+id/iv_poster" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_rating,iv_poster"
            tools:layout_editor_absoluteY="554dp" />

        <TextView
            android:id="@+id/overview_label"
            style="@style/Detail_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/overview"
            app:layout_constraintBottom_toTopOf="@+id/tv_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_margin"
            app:layout_constraintTop_toBottomOf="@+id/barrier"
            tools:text="Overview:" />

        <TextView
            android:id="@+id/tv_desc"
            style="@style/Detail_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tv_review_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/start_margin"
            app:layout_constraintTop_toBottomOf="@+id/overview_label"
            tools:text="overview comes here" />

        <TextView
            android:id="@+id/tv_review_label"
            style="@style/Detail_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_review"
            app:layout_constraintBottom_toTopOf="@+id/rv_review"
            app:layout_constraintEnd_toStartOf="@+id/btn_rev_expnd"
            app:layout_constraintStart_toStartOf="@id/start_margin"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

        <TextView
            android:id="@+id/tv_trailer_label"
            style="@style/Detail_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/label_trailers"
            app:layout_constraintBottom_toTopOf="@+id/rv_trailers"
            app:layout_constraintEnd_toStartOf="@+id/btn_trailer_expnd"
            app:layout_constraintStart_toStartOf="@id/start_margin"
            app:layout_constraintTop_toBottomOf="@+id/rv_review" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tv_trailer_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_margin"
            app:layout_constraintTop_toBottomOf="@+id/tv_review_label">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_margin"
            app:layout_constraintTop_toBottomOf="@id/tv_trailer_label" />

        <ImageButton
            android:id="@+id/btn_rev_expnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="#121212"
            app:layout_constraintBottom_toBottomOf="@+id/tv_review_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_review_label"
            app:layout_constraintTop_toTopOf="@+id/tv_review_label"
            app:srcCompat="@drawable/ic_baseline_expand_more_24" />

        <ImageButton
            android:id="@+id/btn_trailer_expnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="#121212"
            app:layout_constraintBottom_toBottomOf="@+id/tv_trailer_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_trailer_label"
            app:layout_constraintTop_toTopOf="@+id/tv_trailer_label"
            app:srcCompat="@drawable/ic_baseline_expand_more_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>